# create_folders

./: .gitignore  README.md  TODO.md  create_folders.py  deploy.cmd  pyproject.toml  test_data.txt
.github/: GITHUB.md
